crates/llvmkit-ir/tests/compile_fail/binary_folder_rejects_non_binary_intrinsic.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/binary_folder_rejects_non_binary_intrinsic.rs:16:13
   |
15 |         constant_fold_binary_intrinsic(
   |         ------------------------------ arguments to this function are incorrect
16 |             IntrinsicId::EXPECT,
   |             ^^^^^^^^^^^^^^^^^^^ expected `BinaryIntrinsic`, found `IntrinsicId`
   |
note: function defined here
  --> src/constant_folding.rs
   |
   | pub fn constant_fold_binary_intrinsic<'ctx, B: ModuleBrand + 'ctx>(
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
